# bevy_blender_editor

./: README.md  TODO
addon/: __init__.py  bevy_client.py  tool.py
game/: Cargo.toml
game/src/: camera.rs  cube_test.rs  main.rs  main2.rs  util.rs
