[package]
name = "game"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
wgpu = { version = "*" }

env_logger = "0.9.0"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "0.17.1"
crossbeam-channel = "0.5.4"
async-compat = "0.2.1"
futures-util = "0.3.21"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
